# billsplit

./: README.md
server/: Cargo.toml
server/src/: main.rs
